# Labs_2_sem

./: CMakeLists.txt  Labs_2_sem.rar  README.md
lab2/part1/: lab2_1.cpp  lab2_1.h
lab2/part2/: lab2_2.cpp  lab2_2.h
lab2/part3/: lab2_3.cpp  lab2_3.h
lab3/: lab3_1.cpp  lab3_2.cpp
lab4/: lab4_1.cpp  num.txt
lab4/Task1/: lab4_1.cpp
lab5/Part1/: input.txt  lab5_1.cpp  output.txt
lab5/Part2/: IntNumbers.txt  lab5_2.cpp  lab5_3.cpp  lab5_4.cpp
lab6/: lab6_1.cpp  lab6_2.cpp  lab6_3.cpp
lab7/: customers.txt  main.cpp  products.txt
