cmake_minimum_required(VERSION 4.2)
project(Labs_2_sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(Labs_2_sem
        lab2/part1/lab2_1.cpp
        lab2/part2/lab2_2.cpp
        main.cpp
        lab3/lab3_1.cpp
        lab3/lab3_2.cpp
        lab2/part2/lab2_2.h
        lab2/part1/lab2_1.h
        lab2/part3/lab2_3.cpp
        lab2/part3/lab2_3.h
)
