cmake_minimum_required(VERSION 4.2)
project(Labs_2_sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(Labs_2_sem
        lab2/part1/lab2_1.cpp
        lab2/part2/lab2_2.cpp
        main.cpp
        lab3/lab3_1.cpp
        lab3/lab3_2.cpp
        lab2/part2/lab2_2.h
        lab2/part1/lab2_1.h
        lab2/part3/lab2_3.cpp
        lab2/part3/lab2_3.h
        lab4/lab4_2.cpp
        lab4/lab4_2.cpp
        lab5/Part1/lab5_1.cpp
        lab5/Part2/lab5_2.cpp
        lab5/Part2/lab5_3.cpp
        lab5/Part2/lab5_4.cpp
)
